2012-01-20  Krzysztof Kowalik  <chris@nu7hat.ch>

	* test/test_kosmonaut_worker.rb: shortened test time
	* lib/kosmonaut/worker.rb: improved reading, small fixes and optimizations

2012-01-18  Krzysztof Kowalik  <chris@nu7hat.ch>

	* lib/kosmonaut.rb: added documentation
	* lib/kosmonaut/client.rb: added docs for part of the methods

2012-01-16  Krzysztof Kowalik  <chris@nu7hat.ch>

	* lib/kosmonaut/socket.rb: base for worker and client
	* lib/kosmonaut/worker.rb: majordomo worker
	* lib/kosmonaut/client.rb: majordomo client
	* lib/kosmonaut/errors.rb: possible protocol errors
	* lib/kosmonaut.rb: base tools
	* test/: tests for client and worker api