@@ -1,5 +1,9 @@
 2012-01-20  Krzysztof Kowalik  <chris@nu7hat.ch>
 
+	* lib/kosmonaut/*.rb: optimized sockets thanks to using raw system timeouts
+
+2012-01-20  Krzysztof Kowalik  <chris@nu7hat.ch>
+
 	* test/test_kosmonaut_worker.rb: shortened test time
 	* lib/kosmonaut/worker.rb: improved reading, small fixes and optimizations
 
